########################
# Current Developments #
########################

Work toward next release. Currently under development.

ADDED:

  * Added `cs_local_python_import` function to the context of a page load.
    This function takes a string containing a filename (with extension,
    relative to the current page's directory) and returns a Python module
    object.

  * Added `.catsoop` as a content file extension, parsed using the same parser
    as content files with the `.md` extension.

  * Added rudimentary support for syntax highlighting of `.catsoop` files in
    Vim.

  * Added `cs_ui_config_flags`, including option to automatically view
    explanations when viewing answers, and to highlight the 'view explanation'
    button.

  * Added `cs_user_config`, including option to specify which variable should
    be used for grouping when managing groups.

  * Added `csq_result_as_string` option to `pythoncode` question types,
    allowing the result to come back as a string (useful for custom types as
    return values from `pythoncode` or `pythonic` question types, where
    evaluation would otherwise fail).

  * Added `logread`, `logwrite`, and `logedit` commands for working with log
    entries in a human-readable format.

CHANGED:

  * File locks are now stored with a `.lock` extension, to avoid potential
    collisions with directory names.

  * Renamed `loader.do_early_load` to `loader.do_preload` and
    `loader.do_late_load` to `loader.load_content` to hopefully remove the last
    of the "early load" and "late load" terminology.

  * Changed the name of the `util` module to `user` to better reflect its
    purpose.

  * CAT-SOOP will use date-based versioning moving forward.  Planned regular
    releases are 20XX.9 and 20XX.2 (September and February, corresponding with
    the start of the fall and spring terms at MIT, respectively).  Each release
    will also now have a codename.

  * Upgraded KaTeX to v0.11.0.
